Refactor: AddBook Api is refactored with Multer to upload images also
