# bookStore/src/routes/book.route.js
@@ -1,11 +1,21 @@
 import express from 'express';
 import * as bookController from '../controllers/book.controller';
 import { auth, verifyRole } from '../middlewares/auth.middleware';
+import multer from 'multer';
+
+// const storage = multer.diskStorage({
+//     destination: 'uploads',
+//     filename: function(req, file, cb) {
+//         cb(null, new Date().toISOString() + file.originalname);
+//     }
+// });
+
+const upload = multer({dest: 'uploads/'});
 
 const router = express.Router();
 
 // route to add book
-router.post('/addbook', auth, verifyRole, bookController.addbook);
+router.post('/addbook', auth, verifyRole, upload.single('productImage'), bookController.addbook);
 
 // route to Get all books
 router.get('/getallbooks',bookController.getallbooks);
